# tpulse

./: .barrelsby.json  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .lintstagedrc  .prettierrc  Cargo.toml  README.md  barrelsby.json  biome.json  bun.lockb  eslint.config.js  index.html  lefthook.yml  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: architecture.md  bun.lockb  collecting-data.md  docusaurus.config.ts  preparation.md  service-integration.md  timetable.md
docs/common-issues/: installation.md
docs/src/pages/: architecture.md
src/: App.tsx  DayView.tsx  global.d.ts  index.css  main.rs  main.tsx  routeTree.gen.ts
src-tauri/: .env.example  Cargo.toml  app_url_name.txt  category_result.txt  result.txt  setting.json  tauri.conf.json  test  test-journal  token.txt
src-tauri/assets/: browser.csv  window.csv
src-tauri/capabilities/: main.json
src-tauri/src/: app.rs  app_config.rs  event_handler.rs  events.rs  google_calendar.rs  google_oauth.rs  lib.rs  main.rs  metrics.rs  metrics_handler.rs  models.rs  setting.rs  sqlite.rs
src-tauri/src/categorizer/: analyzer.rs  indexing.rs  loader.rs  mod.rs
src-tauri/src/collector/: mod.rs
src-tauri/src/collector/browser/: mod.rs
src-tauri/src/collector/window/: mod.rs  window_query.rs
src-tauri/src/config/: mod.rs  oauth.rs  setting.rs  user.rs
src-tauri/src/db/: browser.rs  migration.rs  mod.rs  sqlite.rs  window.rs  work_session.rs
src-tauri/src/dtos/: event.rs
src-tauri/src/event_handler/: logger.rs  mod.rs
src-tauri/src/event_handler/categorizer/: mod.rs
src-tauri/src/event_handler/categorizer/helpers/: mod.rs  vscode_categorizer.rs  youtube_categorizer.rs
src-tauri/src/event_handler/categorizer/helpers/inverted_index_categorizer/: index.csv  mod.rs
src-tauri/src/event_handler/logger/: mod.rs
src-tauri/src/event_handler/logger/categorizer/: mod.rs
src-tauri/src/event_handler/logger/categorizer/helpers/: mod.rs  vscode_categorizer.rs  youtube_categorizer.rs
src-tauri/src/event_handler/logger/categorizer/helpers/inverted_index_categorizer/: mod.rs  utils.rs
src-tauri/src/fetcher/: delegate.rs  error.rs  mod.rs
src-tauri/src/google/: calendar.rs  mod.rs  oauth.rs
src-tauri/src/initializer/: db.rs  mod.rs  raw_metric_processor.rs
src-tauri/src/metric/: mod.rs  schema.rs
src-tauri/src/metric/categorizer/: browser.rs  metric.rs  mod.rs  processor.rs  util.rs  window.rs  youtube.rs
src-tauri/src/metric/collector/: afk.rs  mod.rs
src-tauri/src/metric/collector/browser/: mod.rs  utils.rs
src-tauri/src/metric/collector/window/: linux.rs  macos.rs  mod.rs  window_query.rs  windows.rs
src-tauri/src/metric/processor/: metric.rs  mod.rs  vscode.rs
src-tauri/src/processor/: browser.rs  metric.rs  mod.rs  youtube.rs
src-tauri/src/raw_metric_processor/: init.rs  mod.rs
src-tauri/src/raw_metric_processor/processors/: browser_tab_processor.rs  default_processor.rs  mod.rs  vscode_processor.rs  youtube_processor.rs
src-tauri/src/service/google/: calendar.rs  mod.rs
src-tauri/src/utils/: get_data_directory.rs  mod.rs  url.rs
src-tauri/src/watcher/: afk.rs  mod.rs  window.rs  window_query.rs
src-tauri/src/watcher/browser/: mod.rs  utils.rs
src-tauri/src/watcher/window/: mod.rs  window_query.rs
src/afk/: event_listener.rs  mod.rs  watcher.rs
src/components/: OverflowText.tsx  index.ts  sidebar.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  checkbox.tsx  datepicker.tsx  timepicker.tsx  tooltip.tsx
src/constants/: index.ts  time.ts  timetable.ts
src/db/: activityLog.ts  calendarEvent.ts  db.ts
src/hooks/: index.ts  useEventListener.ts  useMouse.ts  useOutsideClick.ts  useTaskData.ts  useZoom.ts
src/interfaces/: domTarget.ts  event.ts  index.ts  task.ts
src/pages/: DayView.tsx  Page.tsx  RefactorHomePage.tsx  TaskDialog.tsx  index.ts
src/pages/home/: Timer.tsx  TodayTask.tsx  index.tsx  timeRow.tsx
src/pages/home/task/: InputItem.tsx  TaskDialog.tsx
src/pages/home/timeSpan/: calendarEvent.tsx  currentTimeline.tsx  workSession.tsx
src/pages/home/timeline/: event.tsx  index.tsx  row.tsx  table.tsx  tableHeader.tsx  timeSpan.tsx
src/pages/home/timeline/span/: calendarEvent.tsx  workSession.tsx
src/routes/: __root.tsx  index.tsx  page.tsx  refactor.tsx
src/services/: activityLog.ts  calendar.ts  db.ts  getEvent.ts  index.ts  plan.ts  syncTask.ts  task.ts
src/states/: event.state..ts  index.ts  task.state.ts
src/utils/: domTarget.ts  filterEvent.ts  getRandomColor.ts  index.ts  log.ts  time.ts  typeChecker.ts
src/watcher/: afk.rs
